# voice-agents

interview_agent/: main.py  pyproject.toml
livekit-multi-agent/: .gitignore
livekit-multi-agent-rag/: main.py  pyproject.toml
livekit-multi-agent/data/: raw_data.txt
quickstart-phone-bot/: inbound.py  outbound.py  outbound_server.py  pyproject.toml
sales_agent/: main.py  pyproject.toml
sales_agent/context/: products.json
